--- a/codigo/public/assets/css/style.css
+++ b/codigo/public/assets/css/style.css
@@ -1,56 +1,51 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"); 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
-
-h3 {
-    color: #093070;
-    border-bottom: 1px solid #c1c1c1;
-}
-h4 {
-    color: #ff7645;
+body {
+  font-family: sans-serif;
+  background-color: #e4e0ee;
+  margin: 0;
+  padding: 20px;
+  text-align: center;
 }
 
-.banner img {
-    width: 100%;
+h1 {
+  color: #4c4a68;
 }
 
-.barra-info {
-    height: 2em;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: space-between;
+.map-container {
+  width: 90%;
+  max-width: 400px;
+  height: 200px;
+  margin: 0 auto;
+  border: 2px solid #4c4a68;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
 }
 
-.menu li {
-    display: inline;
-    margin: 0px;
-    padding: 0.5em 1em; 
-    height: 2em;
-    line-height: 2em;
+#fullMap {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+  border-radius: 10px;
 }
 
-.menu li a {
-    text-decoration: none;
-    color: #ff7645;
-    font-weight: bold;
-}
-
-.menu li:hover {
-    background-color: darkblue;
-    color: white;
-}
-
-.dados-usuario {
-    height: 2em;
-    line-height: 2em;
-    margin-right: 20px;
-}
-
-main {
-    padding: 20px;
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
 }
