--- a/codigo/public/vinicius_goncalves/css/style.css
+++ b/codigo/public/vinicius_goncalves/css/style.css
@@ -86,6 +86,11 @@ button:hover {
   opacity: 0.9;
 }
 
+footer {
+  text-align: center;
+  margin-top: 2em;
+}
+
 @media (max-width: 1000px) {
 
   html,
