Adição de máscara para CEP e Número do Endereço, preview das imagens a serem enviadas

--- a/codigo/public/vinicius_goncalves/css/style.css
+++ b/codigo/public/vinicius_goncalves/css/style.css
@@ -352,6 +352,28 @@ select, option {
   color: #888;
 }
 
+/* Preview das Imagesn*/
+.imagens-preview {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+  margin-bottom: 1.5em;
+}
+
+.imagens-preview img.preview {
+  width: 100%;
+  max-width: 220px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.imagens-preview img.preview:hover {
+  transform: scale(1.05);
+}
 
 /* Responsividade simples para os botões de ação */
 @media (max-width: 480px) {
@@ -364,5 +386,8 @@ select, option {
     .botao-icone {
         font-size: 13px;
         padding: 8px 12px;
+    }
+    .imagens-preview img.preview {
+    max-width: 100%;
     }
 }   
